templates/kustomize/wingman-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wingman-api
  labels:
    app: wingman-api
    component: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: wingman-api
